src/test/test-models/bad/continue4.stan
// tests correct value passed from generated quantities
model {
}
generated quantities {
  int n;
  continue;
}
